--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>collage</title>
     <script src="p5.min.js"></script>
-    <script src="p5.dom.js"></script>
-    <script src="style.js"></script>
+    <!-- <script src="p5.dom.js"></script> -->
+    <script src="sketch.js"></script>
   </head>
   <body>
   </body>
